# async_move_trait

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
tests/: macro_test.rs
