[package]
name = "async_move_trait"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }

[dev-dependencies]
rstest = "0.25.0"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
